fixed off centered box...FINALLY!

--- a/css/convertLength.css
+++ b/css/convertLength.css
@@ -8,7 +8,18 @@
 	text-align: center;
 }
 
-#numFrom, #converted_value {
+#numFrom  {
+	height: 36px;
+	width: 150px;
+	display: inline-block;
+	background-color: white;
+	border: none;
+	text-align: center;
+	border-radius: 5px;
+	margin-left: 160px;
+	float: left;
+}
+#converted_value{
 	height: 38px;
 	width: 150px;
 	display: inline-block;
@@ -17,7 +28,6 @@
 	text-align: center;
 	border-radius: 5px;
 	margin-right: 10px;
-	padding-top: .2cm;
 }
 
 #dropFrom {
